--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ python:
   - "3.5"
   - "3.6"
 install: 
-  - "pip install -e ."
+  - "python setup.py develop"
   - "pip install setuptools"
 script: "pytest"
