--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ python:
   - "3.6"
 install: 
   - "python setup.py develop"
-  - "pip install setuptools"
+  - "pip install -r requirements.txt"
 script: "pytest"
