--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ python:
 install: 
   - "python setup.py develop"
   - "pip install -r requirements.txt"
-script: "pytest"
+script: "py.test coveralls/tests.py --doctest-modules --pep8 coveralls -v --cov coveralls --cov-report term-missing"
+after_success:
+  - coveralls
