--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,9 @@ python:
   - "3.5"
   - "3.6"
 install: 
-  - "python -e . --use-mirrors"
+  - "python setup.py develop"
 before_script:
-  - pip install -r requirements.txt --use-mirrors
-  - py.test tests/ --cov=jolokia
-  - cd -
-script: "py.test tests/ --doctest-modules -v --cov jolokia --cov-report term-missing"
+  - pip install -r requirements.txt
+script: "coverage run --source=jolokia setup.py test"
 after_success:
   - coveralls
