--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 appdirs==1.4.3
 coverage==4.0.3
+coveralls==1.1
+docopt==0.6.2
 packaging==16.8
 py==1.4.33
 pyparsing==2.2.0
 pytest==3.0.7
 pytest-cov==2.5.1
-python-coveralls==2.9.1
 PyYAML==3.12
 requests==2.14.2
 six==1.10.0
