--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,39 @@
+alabaster==0.7.10
 appdirs==1.4.3
+astroid==1.6.1
+Babel==2.5.3
+certifi==2018.1.18
+chardet==3.0.4
 coverage==4.0.3
 coveralls==1.1
 docopt==0.6.2
+docutils==0.14
+idna==2.6
+imagesize==0.7.1
+isort==4.2.15
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
+mock==2.0.0
 packaging==16.8
+pbr==3.1.1
+pkginfo==1.4.1
 py==1.4.33
+Pygments==2.2.0
+pylint==1.8.2
 pyparsing==2.2.0
 pytest==3.0.7
 pytest-cov==2.5.1
+pytz==2017.3
 PyYAML==3.12
-requests==2.14.2
+requests==2.18.4
+requests-toolbelt==0.8.0
 six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.6.6
+sphinxcontrib-websupport==1.0.1
+tqdm==4.19.5
+twine==1.9.1
+urllib3==1.22
+wrapt==1.10.11
