--- a/ci/codeship/Dockerfile.jolokia.tomcat
+++ b/ci/codeship/Dockerfile.jolokia.tomcat
@@ -9,5 +9,6 @@ RUN ./add_hostname_alias
 FROM tomcat:{{tomcat_version}}
 
 COPY --from=alias-appender ./server.xml conf/server.xml
+HEALTHCHECK CMD curl -f http://jolokia{{jolokia_version}}-tomcat{{tomcat_version}}:8080/jolokia
 
 RUN wget -O ./webapps/jolokia.war http://search.maven.org/remotecontent?filepath=org/jolokia/jolokia-war/{{jolokia_version}}/jolokia-war-{{jolokia_version}}.war
