--- a/ci/codeship/versions.yml
+++ b/ci/codeship/versions.yml
@@ -20,40 +20,40 @@ jolokia:
     protocol: 7.2
   - agent: 1.3.0
     protocol: 7.2
-  - agent: 1.2.3
-    protocol: 7.2
-  - agent: 1.2.2
-    protocol: 7.2
-  - agent: 1.2.1
-    protocol: 7.1
-  - agent: 1.2.0
-    protocol: 7.1
-  - agent: 1.1.5
-    protocol: 7.0
-  - agent: 1.1.4
-    protocol: 7.0
-  - agent: 1.1.3
-    protocol: 7.0
-  - agent: 1.1.2
-    protocol: 7.0
-  - agent: 1.1.1
-    protocol: 7.0
-  - agent: 1.1.0
-    protocol: 7.0
-  - agent: 1.0.6
-    protocol: 6.1
-  - agent: 1.0.5
-    protocol: 6.1
-  - agent: 1.0.4
-    protocol: 6.1
-  - agent: 1.0.3
-    protocol: 6.1
-  - agent: 1.0.2
-    protocol: 6.1
-  - agent: 1.0.1
-    protocol: 6.0
-  - agent: 1.0.0
-    protocol: 6.0
+  # - agent: 1.2.3
+  #   protocol: 7.2
+  # - agent: 1.2.2
+  #   protocol: 7.2
+  # - agent: 1.2.1
+  #   protocol: 7.1
+  # - agent: 1.2.0
+  #   protocol: 7.1
+  # - agent: 1.1.5
+  #   protocol: 7.0
+  # - agent: 1.1.4
+  #   protocol: 7.0
+  # - agent: 1.1.3
+  #   protocol: 7.0
+  # - agent: 1.1.2
+  #   protocol: 7.0
+  # - agent: 1.1.1
+  #   protocol: 7.0
+  # - agent: 1.1.0
+  #   protocol: 7.0
+  # - agent: 1.0.6
+  #   protocol: 6.1
+  # - agent: 1.0.5
+  #   protocol: 6.1
+  # - agent: 1.0.4
+  #   protocol: 6.1
+  # - agent: 1.0.3
+  #   protocol: 6.1
+  # - agent: 1.0.2
+  #   protocol: 6.1
+  # - agent: 1.0.1
+  #   protocol: 6.0
+  # - agent: 1.0.0
+  #   protocol: 6.0
 
 # Versions for Python and app servers should correspond to Docker image tags
 python:
