Updated Jenkinsfile for Docker agent

--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -3,8 +3,8 @@ pipeline {
   stages {
     stage('Test') {
       agent {
-        node {
-          label 'py3'
+        docker {
+          image: 'python:3.6.4'
         }
         
       }
