--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -1,8 +1,6 @@
 pipeline {
   agent {
-    docker {
-      image: 'python:3.6.4'
-    }
+    docker image: 'python:3.6.4'
   }
   stages {
     stage('Test') {
