Moved agent back to stage

--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -1,12 +1,12 @@
 pipeline {
-  agent {
-    docker {
-      image 'python:3.6.4'
-    }
-  }
+  agent none
   stages {
     stage('Test') {
-
+      agent {
+        docker {
+          image 'python:3.6.4'
+        }
+      }
       steps {
         git url: 'https://github.com/wbrefvem/python-jolokia.git', branch: 'pipeline'
         sh 'pip install pipenv --upgrade'
