--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -9,8 +9,7 @@ pipeline {
       }
       steps {
         git url: 'https://github.com/wbrefvem/python-jolokia.git', branch: 'pipeline'
-        sh 'pip install pipenv --upgrade'
-        sh 'which python && pipenv install --dev --system'
+        sh 'pip install -r requirements.txt -r dev-requirements.txt'
         sh 'pytest -v --junit-xml test-reports/results.xml'
         junit 'test-reports/results.xml'
       }
