Added command to agent config

--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
       agent {
         docker {
           image 'python:3.6.4'
+          command 'cat'
         }
       }
       steps {
