Updated dockerignore and Jenkinsfile

--- a/ci/jenkins/Jenkinsfile
+++ b/ci/jenkins/Jenkinsfile
@@ -5,13 +5,13 @@ pipeline {
       agent {
         docker {
           image 'python:3.6.4'
-          command 'cat'
         }
       }
       steps {
         git url: 'https://github.com/wbrefvem/python-jolokia.git', branch: 'docker'
         sh 'pip install pipenv --upgrade'
-        sh 'git branch -a && pwd && ls -al && pipenv install --dev --system'
+        sh 'pipenv lock'
+        sh 'pipenv install --dev --system'
         sh 'pytest -v --junit-xml test-reports/results.xml'
         junit 'test-reports/results.xml'
       }
