Tests now provide default mocking if Jolokia env variables not present

--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,10 @@ twine = "*"
 coveralls = "*"
 mock = "*"
 pylint = "*"
-
+pytest-cov = "*"
+"jinja2" = "*"
+pyyaml = "*"
+requests = "*"
 
 [packages]
 
